--- a/catalog.html
+++ b/catalog.html
@@ -1,41 +1,174 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Каталог товарів – GadgetHub</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background: #1f2937;
+      color: white;
+      padding: 1em 2em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 2em;
+      font-weight: 600;
+      text-decoration: none;
+      color: white;
+    }
+
+    nav a,
+    #logoutBtn {
+      color: white;
+      margin-left: 20px;
+      font-size: 1.1em;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover,
+    #logoutBtn:hover {
+      color: #38bdf8;
+    }
+
+    .main-content {
+      display: grid;
+      grid-template-columns: 250px 1fr;
+      gap: 2rem;
+      padding: 2rem 5vw;
+      flex: 1;
+    }
+
+    aside.filters {
+      background: #fff;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 0 8px rgba(0,0,0,0.05);
+    }
+
+    .filters h3 {
+      margin-top: 0;
+      margin-bottom: 1rem;
+      font-size: 1.2rem;
+    }
+
+    .filter-group {
+      margin-bottom: 1.5rem;
+    }
+
+    label {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    select {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 1em;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    .product-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 1.5rem;
+      align-items: start;
+    }
+
+    .product {
+      background: white;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      text-align: center;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    }
+
+    .product img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 0.5em;
+    }
+
+    .product a {
+      display: block;
+      margin: 0.5em 0 0.2em;
+      font-weight: 600;
+      color: #1f2937;
+      text-decoration: none;
+    }
+
+    .product .price {
+      color: #10b981;
+      font-weight: bold;
+      font-size: 1.1em;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #374151;
+      color: white;
+      padding: 1em;
+      margin-top: auto;
+    }
+  </style>
 </head>
 <body>
 
-<header class="site-header">
+<header>
   <a href="index.html" class="logo">GadgetHub</a>
   <nav>
     <a href="catalog.html">Каталог</a>
     <a href="cart.html" id="cartLink" style="display: none;">Кошик</a>
     <a href="auth.html" id="registerLink">Реєстрація</a>
-    <button id="logoutBtn" style="display: none; background: none; border: none; color: white; font-size: 1.2em; cursor: pointer; margin: 0 20px;">Вийти</button>
+    <button id="logoutBtn" style="display: none; background: none; border: none; font: inherit; cursor: pointer;">Вийти</button>
   </nav>
 </header>
 
-<div class="container">
-  <h2>Усі товари</h2>
+<div class="main-content">
+  <aside class="filters">
+    <h3>Фільтр товарів</h3>
 
-  <div style="margin-bottom: 2em;">
-    <label for="categoryFilter">Фільтр:</label>
-    <select id="categoryFilter">
-      <option value="">-- Оберіть критерії --</option>
-      <option value="case">Чохли</option>
-      <option value="charger">Зарядки</option>
-      <option value="headphones">Навушники</option>
-      <option value="glass">Скло</option>
-    </select>
-    <div id="additionalFilters" style="margin-top: 1em;"></div>
-  </div>
+    <div class="filter-group">
+      <label for="categoryFilter">Категорія:</label>
+      <select id="categoryFilter">
+        <option value="">-- Оберіть категорію --</option>
+        <option value="case">Чохли</option>
+        <option value="charger">Зарядки</option>
+        <option value="headphones">Навушники</option>
+        <option value="glass">Скло</option>
+      </select>
+    </div>
 
-  <div class="grid" id="productGrid">
+    <div id="additionalFilters"></div>
+  </aside>
 
-    <div class="product">
+  <div class="product-grid" id="productGrid">
+ <div class="product">
       <img src="img/case1.jpg" alt="Чохол iPhone 13">
       <a href="case1.html">Чохол iPhone 13</a>
       <div class="price">249 грн</div>
@@ -128,7 +261,7 @@
   </div>
 </div>
 
-<footer class="site-footer">
+<footer>
   &copy; 2025 GadgetHub. Усі права захищено.
 </footer>
 
@@ -160,7 +293,9 @@
 
   const categorySelect = document.getElementById("categoryFilter");
   const additionalFilters = document.getElementById("additionalFilters");
+  const productGrid = document.getElementById("productGrid");
   const productElements = document.querySelectorAll(".product");
+
 
   categorySelect.addEventListener("change", () => {
     const category = categorySelect.value;
