--- a/index.html
+++ b/index.html
@@ -1,63 +1,153 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GadgetHub – Головна</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f9f9f9; }
-    header { background: #222; color: white; padding: 1em; text-align: center; }
-    nav a { color: white; margin: 0 10px; text-decoration: none; }
-    main { padding: 2em; }
-    h2 { margin-bottom: 0.5em; }
-    .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 1em; }
-    .product { background: white; border: 1px solid #ccc; border-radius: 8px; padding: 1em; text-align: center; }
-    footer { background: #525252; padding: 1em; text-align: center; margin-top: 2em; }
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: #f5f7fa;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    header {
+      background: #1f2937;
+      color: white;
+      padding: 1em 2em;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .logo {
+      font-size: 2em;
+      font-weight: 600;
+      text-decoration: none;
+      color: white;
+    }
+
+    nav a,
+    #logoutBtn {
+      color: white;
+      margin-left: 20px;
+      font-size: 1.1em;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover,
+    #logoutBtn:hover {
+      color: #38bdf8;
+    }
+
+    main {
+      flex: 1;
+      padding: 2rem 5vw;
+    }
+
+    h2 {
+      font-size: 1.5rem;
+      margin: 2rem 0 1rem;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .product {
+      background: white;
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      text-align: center;
+      text-decoration: none;
+      color: inherit;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+    }
+
+    .product:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+    }
+
+    .product img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 0.5em;
+    }
+
+    .product small {
+      display: block;
+      margin-top: 0.3em;
+      font-weight: 600;
+      color: #10b981;
+    }
+
+    footer {
+      text-align: center;
+      background-color: #374151;
+      color: white;
+      padding: 1em;
+      margin-top: auto;
+    }
   </style>
 </head>
 <body>
 
-<header style="background: #222; color: white; padding: 1em; display: flex; justify-content: space-between; align-items: center;">
-  <a href="index.html" style="font-size: 2.5em; color: white; text-decoration: none;">GadgetHub</a>
-  
-  <nav style="margin-right: 30px;">
-    <a href="catalog.html" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Каталог</a>
-    <a href="cart.html" id="cartLink" style="color: white; margin: 0 20px; font-size: 1.2em; text-decoration: none;">Кошик</a>
-    <a href="auth.html" id="registerLink" style="color: white; margin-left: 30px; text-decoration: none;">Реєстрація</a>
-    <button id="logoutBtn" style="display: none; background: none; border: none; color: white; font-size: 1.2em; cursor: pointer; margin: 0 20px;">Вийти</button>
-  </nav>
-</header>
+  <header>
+    <a href="index.html" class="logo">GadgetHub</a>
+    <nav>
+      <a href="catalog.html">Каталог</a>
+      <a href="cart.html" id="cartLink">Кошик</a>
+      <a href="auth.html" id="registerLink">Реєстрація</a>
+      <button id="logoutBtn" style="background: none; border: none; font: inherit; cursor: pointer; display: none;">Вийти</button>
+    </nav>
+  </header>
 
-<main>
-  <h2>🔁 Рекомендовані товари</h2>
-  <div id="recommended" class="grid"></div>
+  <main>
+    <h2>🔁 Рекомендовані товари</h2>
+    <div id="recommended" class="grid"></div>
 
-  <h2>🆕 Нові товари</h2>
-  <div class="grid">
-    <a href="case3.html" class="product" style="text-decoration: none; color: inherit;">
-      <img src="img/case3.webp" alt="Прозорий чохол Xiaomi" style="width:100%; height:150px; object-fit:cover; border-radius:6px; margin-bottom: 0.5em;">
-      Прозорий чохол Xiaomi<br><small>199 грн</small>
-    </a>
-    <a href="charger4.html" class="product" style="text-decoration: none; color: inherit;">
-      <img src="img/charger4.jpg" alt="Автозарядка з 2 USB" style="width:100%; height:150px; object-fit:cover; border-radius:6px; margin-bottom: 0.5em;">
-      Автозарядка з 2 USB<br><small>849 грн</small>
-    </a>
-    <a href="headphones4.html" class="product" style="text-decoration: none; color: inherit;">
-      <img src="img/headphones4.webp" alt="Навушники каплі JBL" style="width:100%; height:150px; object-fit:cover; border-radius:6px; margin-bottom: 0.5em;">
-      Навушники каплі JBL<br><small>1399 грн</small>
-    </a>
-    <a href="glass4.html" class="product" style="text-decoration: none; color: inherit;">
-      <img src="img/glass4.png" alt="Глянцеве скло 9H" style="width:100%; height:150px; object-fit:cover; border-radius:6px; margin-bottom: 0.5em;">
-      Глянцеве скло 9H<br><small>179 грн</small>
-    </a>
-  </div>
-</main>
+    <h2>🆕 Нові товари</h2>
+    <div class="grid">
+      <a href="case3.html" class="product">
+        <img src="img/case3.webp" alt="Прозорий чохол Xiaomi" />
+        Прозорий чохол Xiaomi
+        <small>199 грн</small>
+      </a>
+      <a href="charger4.html" class="product">
+        <img src="img/charger4.jpg" alt="Автозарядка з 2 USB" />
+        Автозарядка з 2 USB
+        <small>849 грн</small>
+      </a>
+      <a href="headphones4.html" class="product">
+        <img src="img/headphones4.webp" alt="Навушники каплі JBL" />
+        Навушники каплі JBL
+        <small>1399 грн</small>
+      </a>
+      <a href="glass4.html" class="product">
+        <img src="img/glass4.png" alt="Глянцеве скло 9H" />
+        Глянцеве скло 9H
+        <small>179 грн</small>
+      </a>
+    </div>
+  </main>
 
-<footer style='background:#525252; color: white; padding: 1em; text-align:center; margin-top: 2em;'>
-  &copy; 2025 GadgetHub. Усі права захищено.
-</footer>
+  <footer>
+    &copy; 2025 GadgetHub. Усі права захищено.
+  </footer>
 
-<script src="js/recommend.js"></script>
-<script type="module" src="js/index-auth.js"></script>
+  <script src="js/recommend.js"></script>
+  <script type="module" src="js/index-auth.js"></script>
 </body>
 </html>
