--- a/glass1.html
+++ b/glass1.html
@@ -1,136 +1,162 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <title>Захисне скло iPhone 13 – GadgetHub</title>
+  <meta charset="UTF-8" />
+  <title>Автозарядка з 2 USB – GadgetHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-  body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f5f7fa;
       margin: 0;
-      padding: 0;
       display: flex;
       flex-direction: column;
-      min-height: 100%;
+      min-height: 100vh;
+      color: #1f2937;
     }
-
     header {
-      background: #222;
+      background: #1f2937;
       color: white;
       padding: 1em 2em;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-
+    header a {
+      color: white;
+      text-decoration: none;
+    }
     .container {
-      padding: 2em;
       flex: 1;
+      padding: 2rem 5vw;
     }
-
-    img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-    }
-
     .card {
       background: white;
-      padding: 2em;
-      border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      display: flex;
+      gap: 2rem;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      flex-wrap: wrap;
     }
-
+    .card img {
+      width: 240px;
+      height: 240px;
+      object-fit: cover;
+      border-radius: 8px;
+      flex-shrink: 0;
+    }
+    .card-content {
+      flex: 1;
+      min-width: 250px;
+    }
+    h2 {
+      margin-top: 0;
+      margin-bottom: 1rem;
+    }
     .filters p {
       margin: 0.3em 0;
     }
-
-    .similar {
-      margin-top: 2em;
+    .price {
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #10b981;
+      margin: 1rem 0;
     }
-
-    .similar .product {
-      background: white;
-      padding: 1em;
-      border-radius: 6px;
-      display: inline-block;
-      margin-right: 1em;
-      box-shadow: 0 0 2px rgba(0,0,0,0.1);
-    }
-
     .add-to-cart-btn {
-      margin-top: 1em;
-      padding: 0.5em 1em;
-      background: #007bff;
+      padding: 0.8em 1.5em;
+      background: #1f2937;
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
+      font-size: 1rem;
       cursor: pointer;
-      font-size: 1em;
+      transition: background 0.3s ease;
     }
-
     .add-to-cart-btn:hover {
-      background: #0056b3;
+      background: #374151;
     }
-
+    .similar {
+      margin-top: 3rem;
+    }
+    .similar h3 {
+      margin-bottom: 1rem;
+    }
+    .similar .product {
+      background: white;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.05);
+      display: inline-block;
+      margin-right: 1rem;
+    }
+    .similar a {
+      color: #1f2937;
+      text-decoration: none;
+      font-weight: 500;
+    }
     footer {
-      background: #eee;
+      background: #374151;
       text-align: center;
+      color: white;
       padding: 1em;
       margin-top: auto;
-      width: 100%;
-      clear: both;
+    }
+    @media (max-width: 600px) {
+      .card {
+        flex-direction: column;
+        align-items: center;
+      }
+      .card img {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <a href="index.html" style="color:white;text-decoration:none;">
-      <h1>GadgetHub</h1>
-    </a>
-    <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
+    <a href="index.html"><h1>GadgetHub</h1></a>
+    <a href="catalog.html">← Назад до каталогу</a>
   </header>
+
   <div class="container">
     <div class="card">
-      <img src="img/glass1.jpg" alt="Захисне скло iPhone 13">
-      <h2>Захисне скло iPhone 13</h2>
-      <div class="filters">
-        <p><strong>Матеріал:</strong> Скло</p>
-        <p><strong>Міцність:</strong> 9H</p>
-        <p><strong>Поверхня:</strong> Глянець</p>
+      <img src="img/charger4.jpg" alt="Автозарядка з 2 USB" />
+      <div class="card-content">
+        <h2>Автозарядка з 2 USB</h2>
+        <div class="filters">
+          <p><strong>Колір:</strong> Чорний</p>
+          <p><strong>Потужність:</strong> 18Вт</p>
+          <p><strong>Тип зарядки:</strong> Авто</p>
+        </div>
+        <p>Ідеально для поїздок. Заряджайте два пристрої одночасно в авто.</p>
+        <div class="price">189 грн</div>
+        <button class="add-to-cart-btn" onclick="addToCart()">Додати до кошика</button>
       </div>
-      <p>Захищає екран від подряпин.</p>
-
-     <!-- 🔘 Кнопка додавання -->
-      <button class="add-to-cart-btn" onclick="addToCart()">Додати до кошика</button>
     </div>
 
-    </div>
     <div class="similar">
       <h3>Схожі товари</h3>
-      <div class="product">
-        <a href="glass2.html">Скло 10H матове Samsung</a>
-      </div>
-      <div class="product">
-        <a href="glass3.html">3D Touch скло Xiaomi</a>
-      </div>
-      <div class="product">
-        <a href="glass4.html">Глянцеве скло 9H</a>
-      </div>
+      <div class="product"><a href="charger1.html">Зарядка Baseus 20Вт</a></div>
+      <div class="product"><a href="charger2.html">Бездротова зарядка Joyroom</a></div>
+      <div class="product"><a href="charger3.html">USB-C адаптер 25Вт</a></div>
     </div>
   </div>
-  <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
 
- <!-- 🔧 Скрипт для додавання до кошика -->
+  <footer>
+    &copy; 2025 GadgetHub. Усі права захищено.
+  </footer>
+
   <script>
     function addToCart() {
       const item = {
-        name: "Захисне скло iPhone 13",
-        price: "129 грн",
-        image: "img/glass1.jpg"
+        name: "Автозарядка з 2 USB",
+        price: "189 грн",
+        image: "img/charger4.jpg"
       };
-
       let cart = JSON.parse(localStorage.getItem("CartLocalStorage")) || [];
       cart.push(item);
       localStorage.setItem("CartLocalStorage", JSON.stringify(cart));
