--- a/headphones2.html
+++ b/headphones2.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Навушники Xiaomi Redmi Buds – GadgetHub</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
   <style>
-body {
-      font-family: Arial, sans-serif;
-      background: #f2f2f2;
+    body {
+      font-family: 'Inter', sans-serif;
+      background: #f5f7fa;
       margin: 0;
-      padding: 0;
       display: flex;
       flex-direction: column;
-      min-height: 100%;
+      min-height: 100vh;
+      color: #1f2937;
     }
 
     header {
-      background: #222;
+      background: #1f2937;
       color: white;
       padding: 1em 2em;
       display: flex;
@@ -23,106 +25,147 @@ body {
       align-items: center;
     }
 
-    .container {
-      padding: 2em;
-      flex: 1;
+    header a {
+      color: white;
+      text-decoration: none;
     }
 
-    img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
+    .container {
+      flex: 1;
+      padding: 2rem 5vw;
     }
 
     .card {
       background: white;
-      padding: 2em;
+      display: flex;
+      gap: 2rem;
+      padding: 2rem;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      flex-wrap: wrap;
+    }
+
+    .card img {
+      width: 240px;
+      height: 240px;
+      object-fit: cover;
       border-radius: 8px;
-      box-shadow: 0 0 4px rgba(0,0,0,0.1);
+      flex-shrink: 0;
+    }
+
+    .card-content {
+      flex: 1;
+      min-width: 250px;
+    }
+
+    h2 {
+      margin-top: 0;
+      margin-bottom: 1rem;
     }
 
     .filters p {
       margin: 0.3em 0;
     }
 
+    .price {
+      font-size: 1.3rem;
+      font-weight: bold;
+      color: #10b981;
+      margin: 1rem 0;
+    }
+
+    .add-to-cart-btn {
+      padding: 0.8em 1.5em;
+      background: #1f2937;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .add-to-cart-btn:hover {
+      background: #374151;
+    }
+
     .similar {
-      margin-top: 2em;
+      margin-top: 3rem;
+    }
+
+    .similar h3 {
+      margin-bottom: 1rem;
     }
 
     .similar .product {
       background: white;
-      padding: 1em;
-      border-radius: 6px;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 1px 6px rgba(0,0,0,0.05);
       display: inline-block;
-      margin-right: 1em;
-      box-shadow: 0 0 2px rgba(0,0,0,0.1);
+      margin-right: 1rem;
     }
 
-    .add-to-cart-btn {
-      margin-top: 1em;
-      padding: 0.5em 1em;
-      background: #007bff;
-      color: white;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 1em;
-    }
-
-    .add-to-cart-btn:hover {
-      background: #0056b3;
+    .similar a {
+      color: #1f2937;
+      text-decoration: none;
+      font-weight: 500;
     }
 
     footer {
-      background: #eee;
+      background: #374151;
       text-align: center;
+      color: white;
       padding: 1em;
       margin-top: auto;
-      width: 100%;
-      clear: both;
+    }
+
+    @media (max-width: 600px) {
+      .card {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .card img {
+        width: 100%;
+        max-width: 300px;
+        height: auto;
+      }
     }
   </style>
 </head>
 <body>
   <header>
-    <a href="index.html" style="color:white;text-decoration:none;">
-      <h1>GadgetHub</h1>
-    </a>
-    <a href="catalog.html" style="color:white;text-decoration:none;">← Назад до каталогу</a>
+    <a href="index.html"><h1>GadgetHub</h1></a>
+    <a href="catalog.html">← Назад до каталогу</a>
   </header>
+
   <div class="container">
     <div class="card">
-      <img src="img/headphones2.jpg" alt="Навушники Xiaomi Redmi Buds">
-      <h2>Навушники Xiaomi Redmi Buds</h2>
-      <div class="filters">
-        <p><strong>Колір:</strong> Білий</p>
-        <p><strong>Тип:</strong> TWS</p>
-        <p><strong>Підключення:</strong> Bluetooth</p>
+      <img src="img/headphones2.jpg" alt="Навушники Xiaomi Redmi Buds" />
+      <div class="card-content">
+        <h2>Навушники Xiaomi Redmi Buds</h2>
+        <div class="filters">
+          <p><strong>Колір:</strong> Білий</p>
+          <p><strong>Тип:</strong> TWS</p>
+          <p><strong>Підключення:</strong> Bluetooth</p>
+        </div>
+        <p>Легкі та зручні.</p>
+        <div class="price">999 грн</div>
+        <button class="add-to-cart-btn" onclick="addToCart()">Додати до кошика</button>
       </div>
-      <p>Легкі та зручні.</p>
-
-     <!-- 🔘 Кнопка додавання -->
-      <button class="add-to-cart-btn" onclick="addToCart()">Додати до кошика</button>
     </div>
 
-    </div>
     <div class="similar">
       <h3>Схожі товари</h3>
-      <div class="product">
-        <a href="headphones1.html">Навушники TWS Pro</a>
-      </div>
-      <div class="product">
-        <a href="headphones3.html">Навушники Sony вакуумні</a>
-      </div>
-      <div class="product">
-        <a href="headphones4.html">Навушники каплі JBL</a>
-      </div>
+      <div class="product"><a href="headphones1.html">Навушники TWS Pro</a></div>
+      <div class="product"><a href="headphones3.html">Навушники Sony вакуумні</a></div>
+      <div class="product"><a href="headphones4.html">Навушники каплі JBL</a></div>
     </div>
   </div>
+
   <footer>&copy; 2025 GadgetHub. Усі права захищено.</footer>
 
- <!-- 🔧 Скрипт для додавання до кошика -->
   <script>
     function addToCart() {
       const item = {
